[tool.poetry]
name = "nba"
version = "0.1.0"
description = ""
authors = ["Ian Brault <ian@brault.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.3"
aiodns = "^3.0.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
